parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALTERNATYWA
    DOPOKI
    DZIELENIE
    JEZELI
    KOMENTARZ_JEDNOLINIJKOWY
    KOMENTARZ_WIELOLINIJKOWY
    KONIUNKCJA
    LEWY_NAWIAS
    MINUS
    MNIEJSZE
    MNIEJSZE_ROWNE
    NEGACJA
    PLUS
    PRAWY_NAWIAS
    RAZY
    ROWNE
    WCZYTAJ
    WIEKSZE
    WIEKSZE_ROWNE

Grammar

Rule 0     S' -> program
Rule 1     program -> GLOWNY LEWA_KLAMRA wyrazenia PRAWA_KLAMRA
Rule 2     wyrazenia -> wyrazenia wyrazenie
Rule 3     wyrazenia -> epsilon
Rule 4     wyrazenie -> CALKOWITA ID PRZYPISANIE LICZBA SREDNIK
Rule 5     wyrazenie -> WYPISZ lista_id SREDNIK
Rule 6     lista_id -> lista_id PRZECINEK ID
Rule 7     lista_id -> ID
Rule 8     wyrazenie -> WYPISZ ID error
Rule 9     wyrazenie -> WYPISZ error
Rule 10    epsilon -> <empty>

Terminals, with rules where they appear

ALTERNATYWA          : 
CALKOWITA            : 4
DOPOKI               : 
DZIELENIE            : 
GLOWNY               : 1
ID                   : 4 6 7 8
JEZELI               : 
KOMENTARZ_JEDNOLINIJKOWY : 
KOMENTARZ_WIELOLINIJKOWY : 
KONIUNKCJA           : 
LEWA_KLAMRA          : 1
LEWY_NAWIAS          : 
LICZBA               : 4
MINUS                : 
MNIEJSZE             : 
MNIEJSZE_ROWNE       : 
NEGACJA              : 
PLUS                 : 
PRAWA_KLAMRA         : 1
PRAWY_NAWIAS         : 
PRZECINEK            : 6
PRZYPISANIE          : 4
RAZY                 : 
ROWNE                : 
SREDNIK              : 4 5
WCZYTAJ              : 
WIEKSZE              : 
WIEKSZE_ROWNE        : 
WYPISZ               : 5 8 9
error                : 8 9

Nonterminals, with rules where they appear

epsilon              : 3
lista_id             : 5 6
program              : 0
wyrazenia            : 1 2
wyrazenie            : 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . GLOWNY LEWA_KLAMRA wyrazenia PRAWA_KLAMRA

    GLOWNY          shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> GLOWNY . LEWA_KLAMRA wyrazenia PRAWA_KLAMRA

    LEWA_KLAMRA     shift and go to state 3


state 3

    (1) program -> GLOWNY LEWA_KLAMRA . wyrazenia PRAWA_KLAMRA
    (2) wyrazenia -> . wyrazenia wyrazenie
    (3) wyrazenia -> . epsilon
    (10) epsilon -> .

    PRAWA_KLAMRA    reduce using rule 10 (epsilon -> .)
    CALKOWITA       reduce using rule 10 (epsilon -> .)
    WYPISZ          reduce using rule 10 (epsilon -> .)

    wyrazenia                      shift and go to state 4
    epsilon                        shift and go to state 5

state 4

    (1) program -> GLOWNY LEWA_KLAMRA wyrazenia . PRAWA_KLAMRA
    (2) wyrazenia -> wyrazenia . wyrazenie
    (4) wyrazenie -> . CALKOWITA ID PRZYPISANIE LICZBA SREDNIK
    (5) wyrazenie -> . WYPISZ lista_id SREDNIK
    (8) wyrazenie -> . WYPISZ ID error
    (9) wyrazenie -> . WYPISZ error

    PRAWA_KLAMRA    shift and go to state 6
    CALKOWITA       shift and go to state 8
    WYPISZ          shift and go to state 9

    wyrazenie                      shift and go to state 7

state 5

    (3) wyrazenia -> epsilon .

    PRAWA_KLAMRA    reduce using rule 3 (wyrazenia -> epsilon .)
    CALKOWITA       reduce using rule 3 (wyrazenia -> epsilon .)
    WYPISZ          reduce using rule 3 (wyrazenia -> epsilon .)


state 6

    (1) program -> GLOWNY LEWA_KLAMRA wyrazenia PRAWA_KLAMRA .

    $end            reduce using rule 1 (program -> GLOWNY LEWA_KLAMRA wyrazenia PRAWA_KLAMRA .)


state 7

    (2) wyrazenia -> wyrazenia wyrazenie .

    PRAWA_KLAMRA    reduce using rule 2 (wyrazenia -> wyrazenia wyrazenie .)
    CALKOWITA       reduce using rule 2 (wyrazenia -> wyrazenia wyrazenie .)
    WYPISZ          reduce using rule 2 (wyrazenia -> wyrazenia wyrazenie .)


state 8

    (4) wyrazenie -> CALKOWITA . ID PRZYPISANIE LICZBA SREDNIK

    ID              shift and go to state 10


state 9

    (5) wyrazenie -> WYPISZ . lista_id SREDNIK
    (8) wyrazenie -> WYPISZ . ID error
    (9) wyrazenie -> WYPISZ . error
    (6) lista_id -> . lista_id PRZECINEK ID
    (7) lista_id -> . ID

    ID              shift and go to state 12
    error           shift and go to state 13

    lista_id                       shift and go to state 11

state 10

    (4) wyrazenie -> CALKOWITA ID . PRZYPISANIE LICZBA SREDNIK

    PRZYPISANIE     shift and go to state 14


state 11

    (5) wyrazenie -> WYPISZ lista_id . SREDNIK
    (6) lista_id -> lista_id . PRZECINEK ID

    SREDNIK         shift and go to state 15
    PRZECINEK       shift and go to state 16


state 12

    (8) wyrazenie -> WYPISZ ID . error
    (7) lista_id -> ID .

    error           shift and go to state 17
    SREDNIK         reduce using rule 7 (lista_id -> ID .)
    PRZECINEK       reduce using rule 7 (lista_id -> ID .)


state 13

    (9) wyrazenie -> WYPISZ error .

    PRAWA_KLAMRA    reduce using rule 9 (wyrazenie -> WYPISZ error .)
    CALKOWITA       reduce using rule 9 (wyrazenie -> WYPISZ error .)
    WYPISZ          reduce using rule 9 (wyrazenie -> WYPISZ error .)


state 14

    (4) wyrazenie -> CALKOWITA ID PRZYPISANIE . LICZBA SREDNIK

    LICZBA          shift and go to state 18


state 15

    (5) wyrazenie -> WYPISZ lista_id SREDNIK .

    PRAWA_KLAMRA    reduce using rule 5 (wyrazenie -> WYPISZ lista_id SREDNIK .)
    CALKOWITA       reduce using rule 5 (wyrazenie -> WYPISZ lista_id SREDNIK .)
    WYPISZ          reduce using rule 5 (wyrazenie -> WYPISZ lista_id SREDNIK .)


state 16

    (6) lista_id -> lista_id PRZECINEK . ID

    ID              shift and go to state 19


state 17

    (8) wyrazenie -> WYPISZ ID error .

    PRAWA_KLAMRA    reduce using rule 8 (wyrazenie -> WYPISZ ID error .)
    CALKOWITA       reduce using rule 8 (wyrazenie -> WYPISZ ID error .)
    WYPISZ          reduce using rule 8 (wyrazenie -> WYPISZ ID error .)


state 18

    (4) wyrazenie -> CALKOWITA ID PRZYPISANIE LICZBA . SREDNIK

    SREDNIK         shift and go to state 20


state 19

    (6) lista_id -> lista_id PRZECINEK ID .

    SREDNIK         reduce using rule 6 (lista_id -> lista_id PRZECINEK ID .)
    PRZECINEK       reduce using rule 6 (lista_id -> lista_id PRZECINEK ID .)


state 20

    (4) wyrazenie -> CALKOWITA ID PRZYPISANIE LICZBA SREDNIK .

    PRAWA_KLAMRA    reduce using rule 4 (wyrazenie -> CALKOWITA ID PRZYPISANIE LICZBA SREDNIK .)
    CALKOWITA       reduce using rule 4 (wyrazenie -> CALKOWITA ID PRZYPISANIE LICZBA SREDNIK .)
    WYPISZ          reduce using rule 4 (wyrazenie -> CALKOWITA ID PRZYPISANIE LICZBA SREDNIK .)

